feat: add top nav

--- a/public/index.html
+++ b/public/index.html
@@ -31,14 +31,9 @@
 				<!-- start headerBlock-->
 				<div class="headerBlock section" id="headerBlock">
 					<div class="container">
-						<div class="section-title text-center">
-							<h2>headerBlock ds dfsdfdsfsd</h2>
-							<svg class="icon icon-telegram ">
-								<use xlink:href="img/svg/sprite.svg#telegram"></use>
-							</svg>
-							<svg class="iconC iconC-telegram ">
-								<use xlink:href="img/svg/spriteC.svg#telegram"></use>
-							</svg>
+						<div class="section-title">
+							<h1>Бизнес.<br>Поколение</h1>
+							<div class="sub-text"><span>Бесплатная</span> онлайн-программа по развитию предпринимательских компетенций и старту бизнеса</div>
 						</div>
 						<div class="row"></div>
 					</div>
