--- a/public/index.html
+++ b/public/index.html
@@ -236,16 +236,102 @@
 					</div>
 				</section>
 				<!-- end sForm-->
-				<!-- start sContact-->
-				<section class="sContact section" id="sContact">
+				<!-- start sFAQ-->
+				<section class="sFAQ section" id="sFAQ">
 					<div class="container">
-						<div class="section-title text-center">
-							<h2>sContact</h2>
+						<div class="section-title">
+							<h2>Часто задаваемые вопросы:</h2>
 						</div>
-						<div class="sContact__row row">
+						<div class="dd-group dd-group-js">
+							<div class="dd-group__item">
+								<div class="dd-group__head dd-head-js">Кто может участвовать в программе?
+								</div>
+								<div class="dd-group__content dd-content-js">
+									<p>Для регистрации необходимо заполнить анкету на платформе Росмолодёжь.Бизнес (https://rosmolbusiness.ru/events/ddd24252-1ddf-42e8-8d80-4b06f203b4c7), после чего с тобой свяжется наш специалист для уточнения деталей.</p>
+								</div>
+							</div>
+							<div class="dd-group__item">
+								<div class="dd-group__head dd-head-js">Какие сферы бизнеса имеют приоритет при отборе?
+								</div>
+								<div class="dd-group__content dd-content-js">
+									<p>Для регистрации необходимо заполнить анкету на платформе Росмолодёжь.Бизнес (https://rosmolbusiness.ru/events/ddd24252-1ddf-42e8-8d80-4b06f203b4c7), после чего с тобой свяжется наш специалист для уточнения деталей.</p>
+								</div>
+							</div>
+							<div class="dd-group__item">
+								<div class="dd-group__head dd-head-js">Каковы основные цели и задачи программы?
+								</div>
+								<div class="dd-group__content dd-content-js">
+									<p>Для регистрации необходимо заполнить анкету на платформе Росмолодёжь.Бизнес (https://rosmolbusiness.ru/events/ddd24252-1ddf-42e8-8d80-4b06f203b4c7), после чего с тобой свяжется наш специалист для уточнения деталей.</p>
+								</div>
+							</div>
+							<div class="dd-group__item active">
+								<div class="dd-group__head dd-head-js">Как происходит процесс регистрации?
+								</div>
+								<div class="dd-group__content dd-content-js active">
+									<p>Для регистрации необходимо заполнить анкету на платформе Росмолодёжь.Бизнес (https://rosmolbusiness.ru/events/ddd24252-1ddf-42e8-8d80-4b06f203b4c7), после чего с тобой свяжется наш специалист для уточнения деталей.</p>
+								</div>
+							</div>
 						</div>
 					</div>
 				</section>
+				<!-- end sFAQ-->
+				<!-- start sContact-->
+				<section class="sContact section" id="sContact">
+					<div class="sContact__container container"><img class="bg-1" src="img/sContacts-bg-1.png" alt="" loading="lazy"/>
+						<div class="section-title">
+							<h2>Контакты</h2>
+						</div>
+						<div class="sContact__row row">
+							<div class="col-auto">
+								<div class="sContact__wrap">
+									<h4>Электронная почта</h4>
+									<div class="sContact__item">
+										<svg class="icon icon-message ">
+											<use xlink:href="img/svg/sprite.svg#message"></use>
+										</svg><a href="mailto:kpodlegaev@business.fadm.gov.ru ">kpodlegaev@business.fadm.gov.ru </a>
+									</div>
+								</div>
+							</div>
+							<div class="col-auto">
+								<div class="sContact__wrap">
+									<h4>Номер телефона</h4>
+									<div class="sContact__item">
+										<svg class="icon icon-phone ">
+											<use xlink:href="img/svg/sprite.svg#phone"></use>
+										</svg><a href="tel:+74956688008">+7 (495) 668-80-08 </a>
+									</div>
+								</div>
+							</div>
+							<div class="col-12 w-0 h-0 p-0 m-0"> </div>
+							<div class="col-auto">
+								<div class="sContact__wrap">
+									<h4>Адрес</h4>
+									<div class="sContact__item">
+										<svg class="icon icon-pin ">
+											<use xlink:href="img/svg/sprite.svg#pin"></use>
+										</svg>
+										<p>Большой Трёхсвятительский переулок, д. 2/1, стр. 4</p>
+									</div>
+								</div>
+							</div>
+							<div class="col-auto">
+								<div class="soc">
+									<a class="soc__item" href="#" target="_blank">
+										<svg class="icon icon-vk ">
+											<use xlink:href="img/svg/sprite.svg#vk"></use>
+										</svg>
+									</a>
+									<a class="soc__item" href="#" target="_blank">
+										<svg class="icon icon-telegram ">
+											<use xlink:href="img/svg/sprite.svg#telegram"></use>
+										</svg>
+									</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</section>
+				<!-- end sFAQ-->
 				<!-- end sContact-->
 			</main>
 			<script>addBlock(`footer`)</script>
