--- a/public/parts/footer.html
+++ b/public/parts/footer.html
@@ -1,11 +1,11 @@
 
 <footer class="footer section">
 	<div class="container">
-		<div class="row">
-			<div class="col"></div>
-			<div class="col">Footer</div>
-			<div class="col"></div>
-			<div class="col-auto"></div>
+		<div class="footer__row row">
+			<div class="col-md"><img src="img/logo.png" alt="" loading="lazy"/>
+			</div>
+			<div class="col-auto"><a href="#">Политика конфиденциальности</a></div>
+			<div class="col-auto"><a href="#">Согласие на обработку данных</a></div>
 		</div>
 	</div>
 </footer>
