feat: add headerblock and particioants block

--- a/public/index.html
+++ b/public/index.html
@@ -31,178 +31,84 @@
 				<!-- start headerBlock-->
 				<div class="headerBlock section" id="headerBlock">
 					<div class="container">
-						<div class="section-title">
-							<h1>Бизнес.<br>Поколение</h1>
-							<div class="sub-text"><span>Бесплатная</span> онлайн-программа по развитию предпринимательских компетенций и старту бизнеса</div>
+						<div class="headerBlock__row row">
+							<div class="headerBlock__col col-12 col-lg-8"><img class="drops" src="img/svg/drops.svg" alt="" loading="lazy"/>
+								<div class="section-title">
+									<h1>Бизнес.<br>Поколение<img class="coursor" src="img/svg/coursor.svg" alt="" loading="lazy"/>
+									</h1>
+									<div class="sub-text"><span>Бесплатная</span> онлайн-программа по развитию предпринимательских компетенций и старту бизнеса</div>
+								</div>
+								<div class="headerBlock__block">
+									<div class="headerBlock__item">Наша миссия – помочь воплотить твою мечту или идею в реальный бизнес.
+									</div>
+									<div class="headerBlock__item">
+										<p>В «Бизнес.Поколении» действующие предприниматели, эксперты и бизнес-тренеры в онлайн-формате расскажут участникам о предпринимательской и инновационной деятельности, а также помогут запустить своё дело с нуля.</p>
+										<p>40 лучших из лучших участников в финале представят свой проект инвесторам в рамках заключительного этапа – инвестиционных сессий, и, при успешной защите, получат  консультационную и, возможно, финансовую поддержку в его реализации.</p>
+									</div>
+								</div>
+							</div>
+							<div class="headerBlock__col col-12 col-lg-4"><img class="puzzle-orange" src="img/puzzle-orange.png" alt="" loading="lazy"/><img class="disks" src="img/svg/disks.svg" alt="" loading="lazy"/>
+								<div class="headerBlock__img-wrap ms-auto"><img class="puzzles" src="img/puzzles.png" alt="" loading="lazy"/><img class="img" src="img/headerBlock-img.png" alt="" loading="lazy"/>
+								</div>
+							</div>
 						</div>
-						<div class="row"></div>
 					</div>
 				</div>
 				<!-- end headerBlock-->
-				<!-- start sCatalog-->
-				<div class="sCatalog section">
+				<!-- start sParticipating-->
+				<section class="sParticipating section" id="sParticipating">
 					<div class="container">
 						<div class="section-title text-center">
-							<h2>sCatalog</h2>
-							<p>Выкупаем проблемные автомобили в день обращения</p>
+							<h2>Условия участия</h2>
+							<div class="sub-title">Наша программа включает четыре Трека, которые ориентированы на различные категории участников:</div>
 						</div>
-						<div class="sCatalog__row row">
-							<div class="sCatalog__col col-3">
-								<article class="product-item">
-									<a class="product-item__img-wrap" href="#">
-										<div class="img-wrap-center"> <img src="img/prod-1.jpg" alt="" loading="lazy"/>
-										</div>
-									</a>
-									<div class="product-item__caption">
-										<div class="product-item__title">
-										</div>
-										<div class="product-item__text">
-										</div>
-										<div class="product-item__price">
-										</div>
-										<a class="product-item__btn" href="#">
-										</a>
-									</div>
-								</article>
-								<!-- /.product-item-->
-							</div>
-							<div class="sCatalog__col col-3">
-								<article class="product-item">
-									<a class="product-item__img-wrap" href="#">
-										<div class="img-wrap-center"> <img src="img/prod-2.jpg" alt="" loading="lazy"/>
-										</div>
-									</a>
-									<div class="product-item__caption">
-										<div class="product-item__title">
-										</div>
-										<div class="product-item__text">
-										</div>
-										<div class="product-item__price">
-										</div>
-										<a class="product-item__btn" href="#">
-										</a>
-									</div>
-								</article>
-								<!-- /.product-item-->
-							</div>
-							<div class="sCatalog__col col-3">
-								<article class="product-item">
-									<a class="product-item__img-wrap" href="#">
-										<div class="img-wrap-center"> <img src="img/prod-3.jpg" alt="" loading="lazy"/>
-										</div>
-									</a>
-									<div class="product-item__caption">
-										<div class="product-item__title">
-										</div>
-										<div class="product-item__text">
-										</div>
-										<div class="product-item__price">
-										</div>
-										<a class="product-item__btn" href="#">
-										</a>
-									</div>
-								</article>
-								<!-- /.product-item-->
-							</div>
-							<div class="sCatalog__col col-3">
-								<article class="product-item">
-									<a class="product-item__img-wrap" href="#">
-										<div class="img-wrap-center"> <img src="img/prod-4.jpg" alt="" loading="lazy"/>
-										</div>
-									</a>
-									<div class="product-item__caption">
-										<div class="product-item__title">
-										</div>
-										<div class="product-item__text">
-										</div>
-										<div class="product-item__price">
-										</div>
-										<a class="product-item__btn" href="#">
-										</a>
-									</div>
-								</article>
-								<!-- /.product-item-->
-							</div>
-							<div class="sCatalog__col col-3">
-								<article class="product-item">
-									<a class="product-item__img-wrap" href="#">
-										<div class="img-wrap-center"> <img src="img/prod-5.jpg" alt="" loading="lazy"/>
-										</div>
-									</a>
-									<div class="product-item__caption">
-										<div class="product-item__title">
-										</div>
-										<div class="product-item__text">
-										</div>
-										<div class="product-item__price">
-										</div>
-										<a class="product-item__btn" href="#">
-										</a>
-									</div>
-								</article>
-								<!-- /.product-item-->
-							</div>
-							<div class="sCatalog__col col-3">
-								<article class="product-item">
-									<a class="product-item__img-wrap" href="#">
-										<div class="img-wrap-center"> <img src="img/prod-6.jpg" alt="" loading="lazy"/>
-										</div>
-									</a>
-									<div class="product-item__caption">
-										<div class="product-item__title">
-										</div>
-										<div class="product-item__text">
-										</div>
-										<div class="product-item__price">
-										</div>
-										<a class="product-item__btn" href="#">
-										</a>
-									</div>
-								</article>
-								<!-- /.product-item-->
-							</div>
-							<div class="sCatalog__col col-3">
-								<article class="product-item">
-									<a class="product-item__img-wrap" href="#">
-										<div class="img-wrap-center"> <img src="img/prod-7.jpg" alt="" loading="lazy"/>
-										</div>
-									</a>
-									<div class="product-item__caption">
-										<div class="product-item__title">
-										</div>
-										<div class="product-item__text">
-										</div>
-										<div class="product-item__price">
-										</div>
-										<a class="product-item__btn" href="#">
-										</a>
-									</div>
-								</article>
-								<!-- /.product-item-->
-							</div>
-							<div class="sCatalog__col col-3">
-								<article class="product-item">
-									<a class="product-item__img-wrap" href="#">
-										<div class="img-wrap-center"> <img src="img/prod-8.jpg" alt="" loading="lazy"/>
-										</div>
-									</a>
-									<div class="product-item__caption">
-										<div class="product-item__title">
-										</div>
-										<div class="product-item__text">
-										</div>
-										<div class="product-item__price">
-										</div>
-										<a class="product-item__btn" href="#">
-										</a>
-									</div>
-								</article>
-								<!-- /.product-item-->
-							</div>
+						<div class="sParticipating__cards"><img class="gold" src="img/gold.png" alt="" loading="lazy"/>
+							<a class="card-participating" href="#">
+								<div class="card-participating__text">Трек 1: Обучающиеся 8-11 классов (14-18 лет)
+								</div>
+								<div class="icon-wrap">
+									<svg class="icon icon-arrow ">
+										<use xlink:href="img/svg/sprite.svg#arrow"></use>
+									</svg>
+								</div>
+							</a>
+							<a class="card-participating" href="#">
+								<div class="card-participating__text">Трек 2: Обучающиеся профессиональных образовательных организаций (16-20 лет)
+								</div>
+								<div class="icon-wrap">
+									<svg class="icon icon-arrow ">
+										<use xlink:href="img/svg/sprite.svg#arrow"></use>
+									</svg>
+								</div>
+							</a>
+							<a class="card-participating" href="#">
+								<div class="card-participating__text">Трек 3: Обучающиеся высших учебных заведений (16-25 лет)
+								</div>
+								<div class="icon-wrap">
+									<svg class="icon icon-arrow ">
+										<use xlink:href="img/svg/sprite.svg#arrow"></use>
+									</svg>
+								</div>
+							</a>
+							<a class="card-participating" href="#">
+								<div class="card-participating__text">Трек 4: Молодые предприниматели с бизнес-идеями (16-35 лет)
+								</div>
+								<div class="icon-wrap">
+									<svg class="icon icon-arrow ">
+										<use xlink:href="img/svg/sprite.svg#arrow"></use>
+									</svg>
+								</div>
+							</a>
+						</div>
+						<div class="bottom-wrapper">
+							<div class="sub-text">Выбирай свой трек и начни работу над своим делом уже сегодня!</div>
+							<svg class="icon icon-arrow-hand ">
+								<use xlink:href="img/svg/sprite.svg#arrow-hand"></use>
+							</svg>
 						</div>
 					</div>
-				</div>
-				<!-- end sCatalog-->
+				</section>
+				<!-- end sParticipating-->
 				<!-- start sForm-->
 				<section class="sForm section" id="sForm">
 					<div class="container">
