--- a/public/parts/header.html
+++ b/public/parts/header.html
@@ -5,7 +5,7 @@
 	<div class="top-nav block-with-lazy">
 		<div class="container">
 			<div class="top-nav__row row">
-				<div class="col col-lg-auto">
+				<div class="col col-lg-auto z">
 					<a class="top-nav__logo" href="/"><img src="img/svg/logo.svg" alt="" loading="lazy"/>
 					</a>
 				</div>
