--- a/public/index.html
+++ b/public/index.html
@@ -243,32 +243,32 @@
 							<h2>Часто задаваемые вопросы:</h2>
 						</div>
 						<div class="dd-group dd-group-js">
+							<div class="dd-group__item active">
+								<div class="dd-group__head dd-head-js">Какие навыки и знания я получу, участвуя в программе «Бизнес.Поколение»?
+								</div>
+								<div class="dd-group__content dd-content-js active">
+									<p>Вы научитесь анализировать и прорабатывать бизнес-идеи, разрабатывать бизнес-планы, проверять гипотезы и защищать свои проекты перед экспертами.</p>
+								</div>
+							</div>
+							<div class="dd-group__item">
+								<div class="dd-group__head dd-head-js">Как проходит программа?
+								</div>
+								<div class="dd-group__content dd-content-js">
+									<p>Вы научитесь анализировать и прорабатывать бизнес-идеи, разрабатывать бизнес-планы, проверять гипотезы и защищать свои проекты перед экспертами.</p>
+								</div>
+							</div>
 							<div class="dd-group__item">
 								<div class="dd-group__head dd-head-js">Кто может участвовать в программе?
 								</div>
 								<div class="dd-group__content dd-content-js">
-									<p>Для регистрации необходимо заполнить анкету на платформе Росмолодёжь.Бизнес (https://rosmolbusiness.ru/events/ddd24252-1ddf-42e8-8d80-4b06f203b4c7), после чего с тобой свяжется наш специалист для уточнения деталей.</p>
+									<p>Вы научитесь анализировать и прорабатывать бизнес-идеи, разрабатывать бизнес-планы, проверять гипотезы и защищать свои проекты перед экспертами.</p>
 								</div>
 							</div>
 							<div class="dd-group__item">
-								<div class="dd-group__head dd-head-js">Какие сферы бизнеса имеют приоритет при отборе?
+								<div class="dd-group__head dd-head-js">Какие сроки проведения программы?
 								</div>
 								<div class="dd-group__content dd-content-js">
-									<p>Для регистрации необходимо заполнить анкету на платформе Росмолодёжь.Бизнес (https://rosmolbusiness.ru/events/ddd24252-1ddf-42e8-8d80-4b06f203b4c7), после чего с тобой свяжется наш специалист для уточнения деталей.</p>
-								</div>
-							</div>
-							<div class="dd-group__item">
-								<div class="dd-group__head dd-head-js">Каковы основные цели и задачи программы?
-								</div>
-								<div class="dd-group__content dd-content-js">
-									<p>Для регистрации необходимо заполнить анкету на платформе Росмолодёжь.Бизнес (https://rosmolbusiness.ru/events/ddd24252-1ddf-42e8-8d80-4b06f203b4c7), после чего с тобой свяжется наш специалист для уточнения деталей.</p>
-								</div>
-							</div>
-							<div class="dd-group__item active">
-								<div class="dd-group__head dd-head-js">Как происходит процесс регистрации?
-								</div>
-								<div class="dd-group__content dd-content-js active">
-									<p>Для регистрации необходимо заполнить анкету на платформе Росмолодёжь.Бизнес (https://rosmolbusiness.ru/events/ddd24252-1ddf-42e8-8d80-4b06f203b4c7), после чего с тобой свяжется наш специалист для уточнения деталей.</p>
+									<p>Вы научитесь анализировать и прорабатывать бизнес-идеи, разрабатывать бизнес-планы, проверять гипотезы и защищать свои проекты перед экспертами.</p>
 								</div>
 							</div>
 						</div>
