--- a/public/index.html
+++ b/public/index.html
@@ -109,39 +109,77 @@
 					</div>
 				</section>
 				<!-- end sParticipating-->
-				<!-- start sForm-->
-				<section class="sForm section" id="sForm">
-					<div class="container">
+				<!-- start sSpeakers-->
+				<section class="sSpeakers section" id="sSpeakers">
+					<div class="container"><img class="puzzle-orange-2" src="img/puzzle-orange.png" alt="" loading="lazy"/><img class="puzzle-orange" src="img/puzzle-orange.png" alt="" loading="lazy"/><img class="disk" src="img/svg/disk.svg" alt="" loading="lazy"/>
 						<div class="section-title text-center">
-							<h2>sForm</h2>
+							<h2>Спикеры</h2>
 						</div>
-						<div class="sForm__row row">
-						</div>
-						<div class="form-wrap">
-							<form>
-								<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" inputmode="" name="" type="text" placeholder=""/>
+						<div class="sSpeakers__row row">
+							<div class="sSpeakers__col col col-lg-4">
+								<div class="card-speaker text-center">
+									<div class="card-speaker__img-wrap"><img src="img/speaker-1.png" alt="" loading="lazy"/>
+									</div>
+									<div class="card-speaker__title">Ольга Клинг
+									</div>
+									<div class="card-speaker__text">Генеральный директор ЛюдиPeople
+									</div>
 								</div>
-								<!-- +e.input-wrap-->
-								<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" inputmode="" name="" type="text" placeholder=""/>
+							</div>
+							<div class="sSpeakers__col col col-lg-4">
+								<div class="card-speaker text-center">
+									<div class="card-speaker__img-wrap"><img src="img/speaker-3.png" alt="" loading="lazy"/>
+									</div>
+									<div class="card-speaker__title">Константин Шобанов
+									</div>
+									<div class="card-speaker__text">Мотивационный тренер по продажам и переговорам, построению отделов продаж, эффективным коммуникациям с клиентами и партнерами.
+									</div>
 								</div>
-								<!-- +e.input-wrap-->
-								<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" inputmode="" name="" type="text" placeholder=""/>
+							</div>
+							<div class="sSpeakers__col col col-lg-4">
+								<div class="card-speaker text-center">
+									<div class="card-speaker__img-wrap"><img src="img/speaker-2.png" alt="" loading="lazy"/>
+									</div>
+									<div class="card-speaker__title">Семен Теняев
+									</div>
+									<div class="card-speaker__text">Основатель TenChat
+									</div>
 								</div>
-								<!-- +e.input-wrap-->
-								<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" inputmode="" name="" type="text" placeholder=""/>
+							</div>
+							<div class="sSpeakers__col col col-lg-4">
+								<div class="card-speaker text-center">
+									<div class="card-speaker__img-wrap"><img src="img/speaker-6.png" alt="" loading="lazy"/>
+									</div>
+									<div class="card-speaker__title">Снежанна Манько
+									</div>
+									<div class="card-speaker__text">Совладелец имидж-лаборатории Персона в Москве
+									</div>
 								</div>
-								<!-- +e.input-wrap-->
-								<button class="form-wrap__btn btn btn-primary" type="submit">Submit
-								</button>
-								<div class="form-wrap__policy">
-									<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="checkbox" type="checkbox" checked="checked"/><small class="custom-input__text text-secondary">Согласен на обработку и хранение моих персональных данных в соответствии с условиями</small>
-									</label>
+							</div>
+							<div class="sSpeakers__col col col-lg-4">
+								<div class="card-speaker text-center">
+									<div class="card-speaker__img-wrap"><img src="img/speaker-5.png" alt="" loading="lazy"/>
+									</div>
+									<div class="card-speaker__title">Никита Прохоров
+									</div>
+									<div class="card-speaker__text">Основатель компаний №1 по репутации в сети, Автор трех бестселлеров, Проекты Reputation Lab, Sidorin Lab, Reputation House, Владелец бизнесов с оценкой 20+ M USD
+									</div>
 								</div>
-							</form>
+							</div>
+							<div class="sSpeakers__col col col-lg-4">
+								<div class="card-speaker text-center">
+									<div class="card-speaker__img-wrap"><img src="img/speaker-4.png" alt="" loading="lazy"/>
+									</div>
+									<div class="card-speaker__title">Павел Вербняк
+									</div>
+									<div class="card-speaker__text">Международный тренер-консультант по личной эффективности, мотивации и психологии успеха. Основатель и руководитель проекта &quot;Успешное мышление&quot;
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
 				</section>
-				<!-- end sForm-->
+				<!-- end sSpeakers-->
 				<!-- start sFAQ-->
 				<section class="sFAQ section" id="sFAQ">
 					<div class="container">
