feat: add scrolling

--- a/public/parts/header.html
+++ b/public/parts/header.html
@@ -16,10 +16,10 @@
 							</div>
 							<nav>
 								<ul class="menu" itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement">
-									<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Участие</a></li>
-									<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Спикеры</a></li>
+									<li class="menu-item" itemprop="item"><a href="#sParticipating" itemprop="url">Участие</a></li>
+									<li class="menu-item" itemprop="item"><a href="#sSpeakers" itemprop="url">Спикеры</a></li>
 									<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Регистрация</a></li>
-									<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Вопросы</a></li>
+									<li class="menu-item" itemprop="item"><a href="#sFAQ" itemprop="url">Вопросы</a></li>
 								</ul>
 							</nav>
 						</div>
