feat: add block

--- a/public/index.html
+++ b/public/index.html
@@ -109,42 +109,46 @@
 					</div>
 				</section>
 				<!-- end sParticipating-->
-				<!-- start sForm-->
-				<section class="sForm section" id="sForm">
+				<!-- start sRegistration-->
+				<section class="sRegistration section" id="sRegistration">
 					<div class="container">
 						<div class="section-title text-center">
-							<h2>sForm</h2>
+							<h2>sRegistration</h2>
 						</div>
-						<div class="sForm__row row">
-						</div>
-						<div class="form-wrap">
-							<form>
-								<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" inputmode="" name="" type="text" placeholder=""/>
-								</div>
-								<!-- +e.input-wrap-->
-								<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" inputmode="" name="" type="text" placeholder=""/>
-								</div>
-								<!-- +e.input-wrap-->
-								<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" inputmode="" name="" type="text" placeholder=""/>
-								</div>
-								<!-- +e.input-wrap-->
-								<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" inputmode="" name="" type="text" placeholder=""/>
-								</div>
-								<!-- +e.input-wrap-->
-								<button class="form-wrap__btn btn btn-primary" type="submit">Submit
-								</button>
-								<div class="form-wrap__policy">
-									<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="checkbox" type="checkbox" checked="checked"/><small class="custom-input__text text-secondary">Согласен на обработку и хранение моих персональных данных в соответствии с условиями</small>
-									</label>
-								</div>
-							</form>
+						<div class="sRegistration__row row">
 						</div>
 					</div>
 				</section>
-				<!-- end sForm-->
+				<!-- end sRegistration-->
+				<!-- start sPartners-->
+				<section class="sPartners section" id="sPartners">
+					<div class="container">
+						<div class="sPartners__wrap">
+							<div class="section-title text-center">
+								<h2>Партнёры</h2>
+								<p>Наши партнёры – это ведущие эксперты и организации, которые поддерживают молодёжное предпринимательство в России. </p><span>Среди них:</span>
+							</div>
+							<div class="sPartners__row">
+								<div class="row">
+									<div class="col-auto"><img src="img/sPartners-img-1.png" alt="" loading="lazy"/>
+									</div>
+									<div class="col-auto"><img src="img/sPartners-img-2.png" alt="" loading="lazy"/>
+									</div>
+									<div class="col-auto"><img src="img/sPartners-img-3.png" alt="" loading="lazy"/>
+									</div>
+									<div class="col-auto"><img src="img/sPartners-img-4.png" alt="" loading="lazy"/>
+									</div>
+									<div class="col-auto"><img src="img/sPartners-img-5.png" alt="" loading="lazy"/>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</section>
+				<!-- end sPartners-->
 				<!-- start sFAQ-->
 				<section class="sFAQ section" id="sFAQ">
-					<div class="container">
+					<div class="sFAQ__container container"><img class="bg" src="img/sFAQ-bg-1.png" alt="" loading="lazy"/>
 						<div class="section-title">
 							<h2>Часто задаваемые вопросы:</h2>
 						</div>
