--- a/public/index.html
+++ b/public/index.html
@@ -182,11 +182,24 @@
 				<!-- end sSpeakers-->
 				<!-- start sRegistration-->
 				<section class="sRegistration section" id="sRegistration">
-					<div class="container">
-						<div class="section-title text-center">
-							<h2>sRegistration</h2>
-						</div>
-						<div class="sRegistration__row row">
+					<div class="sRegistration__container container">
+						<div class="sRegistration__wrap">
+							<div class="section-title text-center">
+								<h2>Регистрация</h2>
+								<p>Регистрация на участие в программе проходит в два потока: </p>
+							</div>
+							<div class="sRegistration__row">
+								<div class="row">
+									<div class="col-lg">
+										<a class="sRegistration__item" href="#">Первый поток: <br/> с 5 июля по 27 октября 2024 года
+										</a>
+									</div>
+									<div class="col-lg">
+										<div class="sRegistration__item">Второй поток: <br/> с 6 августа по 27 ноября 2024 года 
+										</div><span>регистрация откроется 6 августа!</span>
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
 				</section>
