feat: edit first and second block, change colors

--- a/public/index.html
+++ b/public/index.html
@@ -32,10 +32,9 @@
 				<div class="headerBlock section" id="headerBlock">
 					<div class="container">
 						<div class="headerBlock__row row">
-							<div class="headerBlock__col col-12 col-lg-8"><img class="drops" src="img/svg/drops.svg" alt="" loading="lazy"/>
+							<div class="headerBlock__col col-12 col-lg-8">
 								<div class="section-title">
-									<h1>Бизнес.<br>Поколение<img class="coursor" src="img/svg/coursor.svg" alt="" loading="lazy"/>
-									</h1>
+									<h1>Бизнес.<br>Поколение</h1>
 									<div class="sub-text"><span>Бесплатная</span> онлайн-программа по развитию предпринимательских компетенций и старту бизнеса</div>
 								</div>
 								<div class="headerBlock__block">
@@ -47,8 +46,8 @@
 									</div>
 								</div>
 							</div>
-							<div class="headerBlock__col col-12 col-lg-4"><img class="puzzle-orange" src="img/puzzle-orange.png" alt="" loading="lazy"/><img class="disks" src="img/svg/disks.svg" alt="" loading="lazy"/>
-								<div class="headerBlock__img-wrap ms-auto"><img class="puzzles" src="img/puzzles.png" alt="" loading="lazy"/><img class="img" src="img/headerBlock-img.png" alt="" loading="lazy"/>
+							<div class="headerBlock__col col-12 col-lg-4"><img class="puzzle-orange" src="img/puzzle-orange.png" alt="" loading="lazy"/><img class="puzzles" src="img/puzzles.png" alt="" loading="lazy"/>
+								<div class="headerBlock__img-wrap ms-auto"><img class="img" src="img/headerBlock-img-1.png" alt="" loading="lazy"/>
 								</div>
 							</div>
 						</div>
@@ -63,7 +62,7 @@
 							<div class="sub-title">Наша программа включает четыре Трека, которые ориентированы на различные категории участников:</div>
 						</div>
 						<div class="sParticipating__cards"><img class="gold" src="img/gold.png" alt="" loading="lazy"/>
-							<a class="card-participating" href="#">
+							<a class="card-participating" href="https://rosmolbusiness.ru/contests/ad8f6b96-f1e8-4448-807f-35ab80161698">
 								<div class="card-participating__text">Трек 1: Обучающиеся 8-11 классов (14-18 лет)
 								</div>
 								<div class="icon-wrap">
@@ -72,7 +71,7 @@
 									</svg>
 								</div>
 							</a>
-							<a class="card-participating" href="#">
+							<a class="card-participating" href="https://rosmolbusiness.ru/contests/0e41d9f8-098c-4099-9e52-bb51f9c2b9c3">
 								<div class="card-participating__text">Трек 2: Обучающиеся профессиональных образовательных организаций (16-20 лет)
 								</div>
 								<div class="icon-wrap">
@@ -81,7 +80,7 @@
 									</svg>
 								</div>
 							</a>
-							<a class="card-participating" href="#">
+							<a class="card-participating" href="https://rosmolbusiness.ru/contests/995fbaae-395a-48f5-857f-38ce3d01de92">
 								<div class="card-participating__text">Трек 3: Обучающиеся высших учебных заведений (16-25 лет)
 								</div>
 								<div class="icon-wrap">
@@ -90,7 +89,7 @@
 									</svg>
 								</div>
 							</a>
-							<a class="card-participating" href="#">
+							<a class="card-participating" href="https://rosmolbusiness.ru/contests/c5e4600e-9182-4e0b-a512-85c31a0c59be">
 								<div class="card-participating__text">Трек 4: Молодые предприниматели с бизнес-идеями (16-35 лет)
 								</div>
 								<div class="icon-wrap">
@@ -106,12 +105,21 @@
 								<use xlink:href="img/svg/sprite.svg#arrow-hand"></use>
 							</svg>
 						</div>
+						<div class="text-center">
+							<a class="sParticipating__btn btn btn-success" href="https://rosmolbusiness.ru/events/a1c0e72c-8c18-43e0-8900-6658a6869c71">Регистрация
+								<div class="icon-wrap">
+									<svg class="icon icon-arrow ">
+										<use xlink:href="img/svg/sprite.svg#arrow"></use>
+									</svg>
+								</div>
+							</a>
+						</div>
 					</div>
 				</section>
 				<!-- end sParticipating-->
 				<!-- start sSpeakers-->
 				<section class="sSpeakers section" id="sSpeakers">
-					<div class="container"><img class="puzzle-orange-2" src="img/puzzle-orange.png" alt="" loading="lazy"/><img class="puzzle-orange" src="img/puzzle-orange.png" alt="" loading="lazy"/><img class="disk" src="img/svg/disk.svg" alt="" loading="lazy"/>
+					<div class="container"><img class="puzzle-orange-2" src="img/puzzle-orange.png" alt="" loading="lazy"/><img class="puzzle-orange" src="img/puzzle-orange.png" alt="" loading="lazy"/>
 						<div class="section-title text-center">
 							<h2>Спикеры</h2>
 						</div>
@@ -204,32 +212,6 @@
 					</div>
 				</section>
 				<!-- end sRegistration-->
-				<!-- start sPartners-->
-				<section class="sPartners section" id="sPartners">
-					<div class="container">
-						<div class="sPartners__wrap">
-							<div class="section-title text-center">
-								<h2>Партнёры</h2>
-								<p>Наши партнёры – это ведущие эксперты и организации, которые поддерживают молодёжное предпринимательство в России. </p><span>Среди них:</span>
-							</div>
-							<div class="sPartners__row">
-								<div class="row">
-									<div class="col-auto"><img src="img/sPartners-img-1.png" alt="" loading="lazy"/>
-									</div>
-									<div class="col-auto"><img src="img/sPartners-img-2.png" alt="" loading="lazy"/>
-									</div>
-									<div class="col-auto"><img src="img/sPartners-img-3.png" alt="" loading="lazy"/>
-									</div>
-									<div class="col-auto"><img src="img/sPartners-img-4.png" alt="" loading="lazy"/>
-									</div>
-									<div class="col-auto"><img src="img/sPartners-img-5.png" alt="" loading="lazy"/>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</section>
-				<!-- end sPartners-->
 				<!-- start sFAQ-->
 				<section class="sFAQ section" id="sFAQ">
 					<div class="sFAQ__container container"><img class="bg" src="img/sFAQ-bg-1.png" alt="" loading="lazy"/>
@@ -269,6 +251,32 @@
 					</div>
 				</section>
 				<!-- end sFAQ-->
+				<!-- start sPartners-->
+				<section class="sPartners section" id="sPartners">
+					<div class="container">
+						<div class="sPartners__wrap">
+							<div class="section-title text-center">
+								<h2>Партнёры</h2>
+								<p>Наши партнёры – это ведущие эксперты и организации, которые поддерживают молодёжное предпринимательство в России. </p><span>Среди них:</span>
+							</div>
+							<div class="sPartners__row">
+								<div class="row">
+									<div class="col-auto"><img src="img/sPartners-img-1.png" alt="" loading="lazy"/>
+									</div>
+									<div class="col-auto"><img src="img/sPartners-img-2.png" alt="" loading="lazy"/>
+									</div>
+									<div class="col-auto"><img src="img/sPartners-img-3.png" alt="" loading="lazy"/>
+									</div>
+									<div class="col-auto"><img src="img/sPartners-img-4.png" alt="" loading="lazy"/>
+									</div>
+									<div class="col-auto"><img src="img/sPartners-img-5.png" alt="" loading="lazy"/>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</section>
+				<!-- end sPartners-->
 				<!-- start sContact-->
 				<section class="sContact section" id="sContact">
 					<div class="sContact__container container"><img class="bg-1" src="img/sContacts-bg-1.png" alt="" loading="lazy"/>
