feat: add agenda block

--- a/public/index.html
+++ b/public/index.html
@@ -212,6 +212,50 @@
 					</div>
 				</section>
 				<!-- end sRegistration-->
+				<!-- start sAgenda-->
+				<section class="sAgenda section" id="sAgenda">
+					<div class="container">
+						<div class="section-title text-center">
+							<h2>Программа</h2>
+						</div>
+						<div class="sAgenda__row row">
+							<div class="sAgenda__col col-12 col-lg-9">
+								<div class="agenda-step">
+									<div class="item"><span>Этап 1:</span>Распределение по направлениям внутри потока (1 неделя) Этап 2: Знакомство (1 неделя)</div>
+								</div>
+								<div class="agenda-step">
+									<div class="item"><span>Этап 3:</span>Проверка гипотезы бизнес-идеи (2 недели)</div>
+								</div>
+								<div class="agenda-step">
+									<div class="item"><span>Этап 4:</span> Разработка бизнес-плана (3 недели)</div>
+								</div>
+								<div class="agenda-step">
+									<div class="item"><span>Этап 5:</span>Финальное оформление бизнес-плана (2 недели)</div>
+								</div>
+								<div class="agenda-step">
+									<div class="item"><span>Этап 6:</span>Защита бизнес-плана (2 недели)</div>
+								</div>
+								<div class="agenda-step">
+									<div class="item"><span>Этап 7:</span>Очная защита проекта (1 неделя)</div>
+								</div>
+							</div>
+							<div class="sAgenda__col col-12 col-lg-3"><img class="img" src="img/coins.png" alt="" loading="lazy"/>
+							</div>
+						</div>
+					</div>
+				</section>
+				<!-- end sAgenda-->
+				<!-- start sDirections-->
+				<section class="sDirections section" id="sDirections">
+					<div class="container">
+						<div class="section-title text-center">
+							<h2>sDirections</h2>
+						</div>
+						<div class="sDirections__row row">
+						</div>
+					</div>
+				</section>
+				<!-- end sDirections-->
 				<!-- start sFAQ-->
 				<section class="sFAQ section" id="sFAQ">
 					<div class="sFAQ__container container"><img class="bg" src="img/sFAQ-bg-1.png" alt="" loading="lazy"/>
@@ -251,6 +295,28 @@
 					</div>
 				</section>
 				<!-- end sFAQ-->
+				<!-- start sExperts-->
+				<section class="sExperts section" id="sExperts">
+					<div class="container">
+						<div class="section-title text-center">
+							<h2>sExperts</h2>
+						</div>
+						<div class="sExperts__row row">
+						</div>
+					</div>
+				</section>
+				<!-- end sExperts-->
+				<!-- start sReviews-->
+				<section class="sReviews section" id="sReviews">
+					<div class="container">
+						<div class="section-title text-center">
+							<h2>sReviews</h2>
+						</div>
+						<div class="sReviews__row row">
+						</div>
+					</div>
+				</section>
+				<!-- end sReviews-->
 				<!-- start sPartners-->
 				<section class="sPartners section" id="sPartners">
 					<div class="container">
